5
Improved compatibility with Ubuntu 20.04. 

4
Added SOG and COG for BOATBOT.

3
Added SBGInterface.

2
Added robid parameter to support several robots.

1
Initial version from VSim V13.