@@ -72,9 +72,12 @@ Debug macros specific to OSComputerRS232Port.
 #endif // __APPLE__
 #ifdef __linux__
 #include <linux/serial.h>
+#pragma push_macro("termios")
+#undef termios
 #define termios termbits_termios
 #include <asm/termbits.h> // Not compatible with termios.h, see https://stackoverflow.com/questions/37710525/including-termios-h-and-asm-termios-h-in-the-same-project...
 #undef termios
+#pragma pop_macro("termios")
 #endif // __linux__
 #endif // !DISABLE_CUSTOM_BAUDRATE
 #include <termios.h>
